<resources>

    <string name="app_name">Tag.me</string>
    <string name="next">Next</string>
    <string name="save">Post</string>
    <string name="post">Post</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="hint_account">Your email</string>
    <string name="hint_pwd">Password</string>
    
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    
    <string name="toast_account_not_exist">This account doesn\'t exist</string>
    <string name="toast_pwd_wrong">Your password is wrong</string>
    <string name="toast_conn_error">Connection error</string>
    <string name="toast_account_exist">This account already exists</string>
    <string name="toast_update_fail">Update profile failed</string>
    <string name="toast_email_wrong">Wrong email formate</string>
    <string name="toast_delete_fail">Fail to delete tag</string>
    
    <string name="dialog_tips">Tips</string>
    <string name="dialog_warning">Information</string>
    <string name="dialog_delete">Do you want to delete this tag</string>
    <string name="delete">Delete</string>
    
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_tag">My Tags</string>
    <string name="title_settings">Settings</string>
    
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    
    <string name="tags">Tags</string>
    <string name="follows">Follows</string>
    <string name="follower">Follower</string>
    <string name="likes">Likes</string>
    <string name="no_tags">No tags</string>
    
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit">Edit</string>
    
    <string name="toast_load_img_fail">Fail to load Image</string>
    <string name="create_tag">Create a new tag</string>
    
    <string name="no_user_account">Please enter user account</string>
    <string name="no_user_pwd">Please enter password</string>
    <string name="email_address_wrong">Invalidate email address</string>
    <string name="uid_exist">The ID has already existed</string>
    
    <string name="choose_img">Choose to load image</string>
    <string name="choose_share">Choose to share</string>
    
    <string name="gender">Gender</string>
    <string name="living_in">Living in</string>
    <string name="unique_id">Unique ID</string>
    <string name="portrait">Portrait</string>
    <string name="user_name">User name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_pwd">Forget password</string>
    
    <string name="loading">Loading</string>
    <string name="signing_in">Signing in</string>
    <string name="signing_up">Signing up</string>
    
    <string name="select_portrait">Choose to load portrait</string>
    <string name="uploading">Uploading</string>
    
    <string name="sign_out">Sign out</string>
    <string name="hint_title">Your title</string>
    <string name="hint_text">Your text here</string>
    <string name="hint_location">Your location</string>
    
    <string name="uploading_done">Uploading completed</string>
    <string name="uploading_fail">Uploading failed</string>
    
    <string name="progress_ready">Release to load</string>
    <string name="progress_normal">More...</string>
    <string name="progress_loading">Loading...</string>
    <string name="progress_none">No more</string>
    
    <string name="comment">Your comments here</string>
    <string name="hint_tap">Tap to add a tag</string>
    <string name="hint_guide">Click tag to view image</string>
    <string name="hint_touch">Click image to return</string>
    
    <string name="noti_follow">follows you</string>
    <string name="noti_like">liks your tag</string>
    <string name="noti_comment">comments on your tag</string>
    
    <string name="setting_share">Share</string>
    <string name="qrcode">Scan to download</string>
    
    <string name="setting_developer">the Developer</string>
    <string name="send_mail">Send mail</string>
    <string name="support">Support</string>
    
    <string name="setting_manage">Tag.me</string>
    <string name="notification">Notification</string>
    <string name="open">open</string>
    <string name="close">closed</string>
    <string name="check_update">Check for update</string>
    <string name="about">About</string>
    <string name="downland">Download the latest version</string>
    <string name="latest">You\'ve got the latest version</string>
    <string name="dialog_support">Smile to the world :)</string>
    <string name="select_email">Select an application to send email</string>
    <string name="about_version">Version 1.263</string>
    <string name="about_team">\@Mocaa</string>
    
    <string name="download_start">Start downloading</string>
    <string name="download_done">Downloading complete</string>
    <string name="download_finish">has downloaded</string>
    
    <string name="you_got">You\'ve got</string>
    <string name="notifications">notifications</string>
    
    <string name="no_title">Please enter title</string>
    <string name="latest_version">Latest version:</string>
    <string name="download_latest">Download latest version?</string>

    <string name="guide_11">Display your souvenirs</string>
    <string name="guide_12">Nepal</string>
    <string name="guide_13">Nice handcraft</string>
    <string name="guide_14">Lost in Penang</string>
    <string name="guide_15">Buddha eye</string>
    <string name="guide_16">Bodhi bracelet</string>

    <string name="guide_1">Use Tag.me to record your journey</string>
    <string name="guide_2">Lasa</string>
    <string name="guide_3">Galsang flower</string>
    <string name="guide_4">the Potala Palace</string>

    <string name="guide_21">To memo your meal</string>
    <string name="guide_22">A nice restaurant</string>
    <string name="guide_23">I want a soda</string>
    <string name="guide_24">Dinner</string>

    <string name="guide_31">Get started!</string>

    <string name="like_num">likes</string>

    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="now">just now</string>
    <string name="ago"> ago</string>
    
    <string name="reply">reply </string>
    
    <string name="share_qzone_title">From Tag.me</string>
    <string name="share_qzone_content">Tag.me is a brand new social application.</string>
    <string name="share_failed">Share failed</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    
    <string name="weibosdk_demo_cancel_download_weibo">Download canceled</string>
    
    <string name="info_upload">Upload this tag now?</string>
</resources>
