<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        style="@style/dialog_title"
        android:text="@string/about"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/bcg_yi_bcg" />
    
	<LinearLayout 
	    android:layout_width="240dip"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@color/white"
	    android:orientation="vertical" >
	    
	<ImageView
        android:layout_marginTop="10dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_logo" />
	        
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/dark"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/about_version"
        android:textColor="@color/gray"
        android:textSize="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/about_team"
        android:textColor="@color/gray"
        android:textSize="21dp" />
</LinearLayout>

</LinearLayout>