<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/bcg_title" >

        <ImageButton
            style="@style/title_bar_img_btn"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:src="@drawable/mt_back" />

        <ImageButton
            style="@style/title_bar_img_btn"
            android:layout_alignParentRight="true"
            android:onClick="save"
            android:src="@drawable/ic_post_white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                style="@style/edit_info_group"
                android:onClick="click_portrait"
                android:paddingBottom="7dp"
                android:paddingTop="7dp" >

                <TextView
                    style="@style/edit_info_hint"
                    android:text="@string/portrait" />

                <com.mocaa.tagme.view.PortraitView
                    android:id="@+id/activity_profile_portrait"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <View style="@style/edit_info_line" />

            <RelativeLayout
                style="@style/edit_info_group"
                android:onClick="click_user_name" >

                <TextView
                    style="@style/edit_info_hint"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/activity_profile_user_name"
                    style="@style/edit_info_text"
                    android:text="Shinado" />
            </RelativeLayout>

            <View style="@style/edit_info_line" />

            <RelativeLayout
                style="@style/edit_info_group"
                android:onClick="click_uid"
                android:tag="unique_id" >

                <TextView
                    style="@style/edit_info_hint"
                    android:text="@string/unique_id" />

                <TextView
                    android:id="@+id/activity_profile_uid"
                    style="@style/edit_info_text"
                    android:text="shinado023" />
            </RelativeLayout>

            <View style="@style/edit_info_line" />

            <RelativeLayout
                style="@style/edit_info_group"
                android:onClick="click_place"
                android:tag="place" >

                <TextView
                    style="@style/edit_info_hint"
                    android:text="@string/living_in" />

                <TextView
                    android:id="@+id/activity_profile_place"
                    style="@style/edit_info_text"
                    android:text="Shanghai" />
            </RelativeLayout>

            <View style="@style/edit_info_line" />

            <RelativeLayout
                style="@style/edit_info_group"
                android:onClick="click_gender"
                android:tag="gender" >

                <TextView
                    style="@style/edit_info_hint"
                    android:text="@string/gender" />

                <TextSwitcher
                    android:id="@+id/activity_profile_gender"
                    style="@style/edit_info_text"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:outAnimation="@android:anim/slide_out_right" >

                    <TextView
                        style="@style/edit_info_text"
                        android:tag="-1"
                        android:text="@string/male" />

                    <TextView
                        style="@style/edit_info_text"
                        android:tag="1"
                        android:text="@string/female" />
                </TextSwitcher>
            </RelativeLayout>

            <View style="@style/edit_info_line" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_style_red"
            android:onClick="sign_out"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

</LinearLayout>