<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
	android:background="@color/white"
    android:gravity="center" 
    android:padding="4dp"
    android:orientation="vertical" >
    
    <LinearLayout 
		android:layout_width="240dip"  
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="vertical" >
	    
	    <TextView 
            android:id="@+id/dialog_normal_title"
           	style="@style/dialog_title"
		    android:text="@string/dialog_warning"
	        />
	    
	    <View 
		    android:layout_width="fill_parent"
		    android:layout_height="1dip"
		    android:background="@color/bcg_yi_bcg"
	        />
	    
	    <TextView 
            android:id="@+id/dialog_normal_content"
	        android:layout_margin="12dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/dialog_delete"
		    android:textSize="18dip"
		    android:textColor="@color/dark"
	        />
	    
	</LinearLayout>
    
    <LinearLayout 
	    android:layout_width="240dip"
	    android:layout_height="46dp"
        >
        
        <Button 
            android:id="@+id/dialog_normal_cancel"
            android:textColor="@color/darker"
            android:textSize="18dp"
            android:text="@string/cancel"
            android:background="@drawable/bcg_button"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:layout_margin="3dp"
            />
        
        <Button 
            android:id="@+id/dialog_normal_done"
            android:textColor="@color/darker"
            android:textSize="18dp"
            android:text="@string/yes"
            android:background="@drawable/bcg_button"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:layout_margin="3dp"
            />
        
    </LinearLayout>

</LinearLayout>
