<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout 
        android:id="@+id/edit_img_delete"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/delete_bar_height"
        android:background="@color/delete_red" >

        <ImageView
            android:id="@+id/edit_img_delete_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_delete" />
    </FrameLayout>

    <ImageView
        android:id="@+id/edit_img_img"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_below="@+id/edit_img_delete"
        android:background="@color/white"
        android:src="@drawable/demo_bdl" />

    <TextView
        android:id="@+id/edit_img_hint"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/edit_img_delete"
        android:background="@color/blur_more"
        android:gravity="top|center"
        android:paddingTop="100dp"
        android:text="@string/hint_tap"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:visibility="gone" />

    <AbsoluteLayout
        android:id="@+id/edit_img_group"
        android:layout_width="fill_parent"
        android:layout_height="364dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <include
        android:id="@+id/edit_img_loc_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_img_group"
        layout="@layout/fragment_loc_view"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/edit_img_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/bcg_title"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageButton
            style="@style/title_bar_img_btn"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:src="@drawable/mt_back" />

        <ImageButton
            android:id="@+id/edit_img_next_btn"
            style="@style/title_bar_img_btn"
            android:layout_alignParentRight="true"
            android:onClick="next"
            android:src="@drawable/ic_post_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_img_input_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_img_img"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_img_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:hint="title"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/bcg_theme" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/edit_img_delete_btns"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blur_more"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="fill_parent"
        	android:layout_height="@dimen/delete_bar_height"
            android:background="@color/delete_dark" >

            <Button
                android:id="@+id/edit_img_delete_done"
                style="@style/title_bar_btn"
                android:layout_alignParentRight="true"
                android:onClick="delete_done"
                android:text="@string/delete" />

            <Button
                android:id="@+id/edit_img_delete_cancel"
                style="@style/title_bar_btn"
                android:onClick="delete_cancel"
                android:text="@string/cancel" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>